--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/CSS/stylescontact.css" />
+    <link rel="stylesheet" href="./CSS/stylescontact.css" />
     <title>GameVerse - Tu mundo de juegos</title>
     <script
       crossorigin
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/babel" src="js/scripts.js"></script>
+    <script type="text/babel" src="./JS/scripts.js"></script>
     <script type="text/babel">
       const App = () => (
         <div>
