--- a/contacto.html
+++ b/contacto.html
@@ -18,15 +18,19 @@
       src="https://unpkg.com/@babel/standalone/babel.min.js"
     ></script>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="min-h-screen flex flex-col">
+    <div id="root" class="flex-grow"></div>
     <script type="text/babel" src="JS/scripts.js"></script>
     <script type="text/babel">
-      const App = () => (
-        <div>
-          <Form />
-        </div>
-      );
+      const App = () => {
+        return (
+          <div className="flex flex-col min-h-screen">
+            <div class="m-16 ..."></div>
+            <Form />
+            <div className="flex-grow"></div>
+          </div>
+        );
+      };
       const root = ReactDOM.createRoot(document.getElementById("root"));
       root.render(<App />);
     </script>
